src/test/deca/syntax/invalid/test21_return.deca
// Description:
//    Programme testant un return sans ';'.
//	  Etape(s) : A et B
// 	  Lexicalement : OUI
//	  Syntaxiquement : NON
//
// Resultats:
// 	  test_lex : pas d'erreur
//    test_synt : erreur ligne 15 : mismatched input ';' expecting...
//
// Historique:
//    cree le 11/01/2021

{
	return ;
}
